# minions-26

./: .commit_msg.txt  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  PHASE_1_SETUP.md  PHASE_2_REDIS_API.md  PHASE_3_WORKER.md  PHASE_4_DOCKER_BUILD.md  PHASE_5_WEBSOCKET.md  PHASE_6_NOTIFICATION.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_HF.md  aws-backend-task-def.json  aws-frontend-task-def.json  columns.pkl  deploy-to-aws.sh  docker-compose.yml  docker_builder.py  index.html  main.py  notifier.py  prometheus.yml  quick-start.sh  requirements.txt  test_websocket.py  worker.py
.github/: ARCHITECTURE.md  CONTRIBUTING.md  SETUP_COMPLETE.md  pull_request_template.md  setup-organization.sh
7.BUILD-RUNNER-PROJECT/: .gitignore  BUILD_REQUIREMENTS.md  Dockerfile  README.md  docker_builder.py  notifier.py  setup-ec2.sh  worker.py
Deploy a trained model to AWS and serve using FastAPI - puku-editor-interns-iftakhar-alam-13/: .editorconfig  docker-compose.yml  main.py
ML Experiment Tracking Platform - A local ML experimentation system - puku-editor-interns-iftakhar-alam-14/sdk/: README.md  pyproject.toml
ML Experiment Tracking Platform - A local ML experimentation system - puku-editor-interns-iftakhar-alam-14/sdk/examples/: __init__.py
ML Experiment Tracking Platform - A local ML experimentation system - puku-editor-interns-iftakhar-alam-14/sdk/mltracker/: exceptions.py
ML Experiment Tracking Platform - A local ML experimentation system - puku-editor-interns-iftakhar-alam-14/sdk/tests/: __init__.py  conftest.py
(+302 files in other folders)
